# denken-os

./: .env.example  .gitattributes  .gitignore  .gitleaksignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IDEAS.md  LICENSE  LICENSE-DATA  LICENSES.md  README.md  SECURITY.md  biome.json  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json  tsconfig.json  vitest.config.ts
.claude/: settings.json
.githooks/: pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  (+2 more)
data/: fields.json
docs/: IMPROVEMENT-CATALOG-2026-06.md  README.md  architecture.md  ideas.md  templates.md
examples/: README.md  pm_loss_reduction_1.json  pm_loss_reduction_1.md  pm_vdrop_3ph_1.json  pm_vdrop_3ph_1.md  th_rlc_series_3.json  th_rlc_series_3.md
lib/: README.md
scripts/: audit-status.ts  build-problems.ts  build-web.ts  check-prompt-cache.ts  export-vault.ts  legacy-ids.json  license-issue.ts  license-keygen.ts  pastexam-coverage.ts  problems-io.ts  quality-report.ts  seed-data-problems.ts  seed-from-templates.ts  shared.ts  supervision-mark.ts  supervision-packet.ts  supervision-status.ts  syllabus-coverage.ts  validate-problems.ts
tests/: achievements.test.ts  break.test.ts  calibration.test.ts  content.test.ts  diagnosis.test.ts  markdown-math.test.tsx  progress.test.ts  scheduler.test.ts  settings.test.ts  setup.ts  storage.test.ts  streak.test.ts  study-session.test.tsx  test_authoring.py  test_content.py  test_core.py  test_difficulty.py  test_figures.py  test_golden.py  test_grounding.py  test_mcq.py  test_pitfalls.py  test_problemset.py  test_quality.py  test_reproducibility.py  test_scoring.py  test_theory.py  test_units.py  use-progress.test.tsx  xp.test.ts
types/: node-lite.d.ts
web/: index.html  manifest.webmanifest  problems.json  sw.js  tsconfig.json
web-next/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
(+771 files in other folders)
